kubernetes/manifest.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: doks-example
spec:
  type: LoadBalancer
  selector:
    app: doks-example
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doks-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doks-example
  template:
    metadata:
      labels:
        app: doks-example
    spec:
      containers:
      - name: nginx
        image: ghcr.io/hojelse/creative-nest:latest
        ports:
        - containerPort: 3000
          protocol: TCP
      imagePullSecrets:
      - name: creative-nest-pull-secret-gh-auth
