kubernetes/service.yaml
apiVersion: v1
kind: Service
# 1. Meta data
metadata:
  labels:
    component: apiserver
    provider: kubernetes
  name: creative-nest-service
  namespace: default
# 2. Specification of the desired state
spec:
  selector:
    app: creative-nest-app # link to deployment.metadata.labels and deployment.spec.template.metadata.labels
  ports:
  - name: http
    port: 80
    targetPort: 3000 # Link to containerPort at deployment.spec.template.spec.containers.ports.containerPort
  sessionAffinity: None
  type: ClusterIP
# 3. Autogenerated status from etcd
status:
